# rsomics-vcf-isec

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: a.vcf  b.vcf  badpos_a.vcf  malformed_a.vcf
